Register/login mode +database start

--- a/templates/login.html
+++ b/templates/login.html
@@ -13,6 +13,11 @@
         <input type="password" name="password" placeholder="password">
         <input type="submit" value="submit">
     </form>
+    <form method="post">
+        <input type="text" name="name_register">
+        <input type="email" name="email_register">
+        <input type="password" name="password_register">
+    </form>
     <p>{{ login }}</p>
     <p>{{ error }}</p>
     
